# go-workflow-stack

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linux-hermes.yml
.go/: architecture-principles.json  hierarchy.json  project.json  vision.json
.go/decisions/: events.jsonl
.go/evidence/: events.jsonl
.go/runs/: events.jsonl  (+2 more)
cli/: go.py
docs/: agent-adapter-protocol.md  architecture.md  authoring-primitives.md  autonomy-benchmark.md  contract-migrations.md  distribution-and-pilots.md  export-import-bundles.md  go-autonomous-loop.md  go-bridge-status.md  go-command-router.md  live-hermes-proof.json  pilot-metrics.json  practical-architecture.md  repo-complete.md  stack-updates.md  state-safety.md  vision.json
go_workflow/: __init__.py  adapter_protocol.py  adapters.py  cli.py  constants.py  hermes_proof.py  migrations.py  routing.py  runtime_identity.py  stack_update.py  state_io.py  task_state.py
schemas/: agent-adapter-request.schema.json  agent-adapter-result.schema.json  architecture-principles.schema.json  event.schema.json  hierarchy.schema.json  live-hermes-proof.schema.json  migration-plan.schema.json  project.schema.json  stack-update-plan.schema.json  task.schema.json  vision.schema.json
scripts/: apply-template.sh  check-distribution.sh  check-linux.sh  check-pilots.sh  check.sh  release-check.sh  run-hermes-acceptance.sh  run-pilots.py
tests/: test_smoke.py
(+111 files in other folders)
