
[project]
name = "go-workflow-stack"
version = "0.3.0"
description = "Repo-local .go JSON/JSONL workflow stack spike"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["go_workflow*"]
