
[project]
name = "go-workflow-stack"
version = "0.3.4"
description = "Repo-local .go JSON/JSONL workflow stack spike"
requires-python = ">=3.11"

[project.scripts]
go-workflow = "go_workflow.cli:main"

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["go_workflow*"]

[tool.setuptools.data-files]
"schemas" = ["schemas/*.json"]
"fixtures/minimal/.go" = [
  "fixtures/minimal/.go/architecture-principles.json",
  "fixtures/minimal/.go/hierarchy.json",
  "fixtures/minimal/.go/project.json",
  "fixtures/minimal/.go/vision.json"
]
"fixtures/minimal/.go/evidence" = ["fixtures/minimal/.go/evidence/events.jsonl"]
"fixtures/minimal/.go/tasks/open" = ["fixtures/minimal/.go/tasks/open/task-schema-smoke.json"]
